--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #1a1a1a;
   padding: 50px;
+  height: 100vh;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
