--- a/src/components/todo/components/item/todo.scss
+++ b/src/components/todo/components/item/todo.scss
@@ -2,13 +2,22 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #1a1a1a;
+  background-color: white;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  padding: 15px 10px;
+  box-shadow: 0 0 10px -2px rgba(0,0,0,0.5);
 
-  &:first-child{
-    border-top: 1px solid #1a1a1a;
-  }
-  padding: 0 10px;
-  p{
-    color: #1a1a1a;
+  .content{
+    display: flex;
+    flex-direction: column;
+    span{
+      font-size: 12px;
+      margin-bottom: 10px;
+    }
+    p{
+      margin: 0;
+      color: #1a1a1a;
+    }
   }
 }
